syntax = "proto3";

option go_package = "github.com/eskpil/outcorp/pkg/definitions";
package definitions;

message Task {
    string id = 1;
    string name = 2;
}

message HeartbeatRequest {
    // The machine id is obtained through /etc/machine-id
    string machine_id = 1;
}

message HeartbeatResponse {
    repeated Task tasks = 1;    
}

message FinishTaskRequest {
    string id = 1;
    bytes data = 2;
}

message FinishTaskResponse {}

service m2m {
    rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse) {}
    rpc FinishTask(FinishTaskRequest) returns (FinishTaskResponse) {}
}
